# nautilus

./: .gitignore  LICENSE  README.md  aa (2).py  convert_csv_to_parquet.py  nifty_future_31072025.csv  nifty_future_31072025.parquet  practice.py  pyproject.toml  requirements.txt  setup.py
marvelquant_data/: __init__.py  data-architecture.md
marvelquant_data/data_types/: __init__.py  future_oi.py  option_oi.py
marvelquant_data/transformers/: transform_official_nautilus.py
marvelquant_data/utils/: __init__.py  contract_generators.py  expiry_calculator.py  nse_calendar.py  timestamp_conversion.py
