[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "marvelquant-data"
version = "0.1.0"
description = "NSE market data management and transformation library for NautilusTrader"
readme = "README.md"
authors = [
    {name = "MarvelQuant", email = "info@marvelquant.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["trading", "backtesting", "nautilus", "nse", "india", "options", "futures"]
requires-python = ">=3.10"
dependencies = [
    "nautilus_trader>=1.200.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jaimarvelquant/marvelquant-data"
Documentation = "https://github.com/jaimarvelquant/marvelquant-data#readme"
Repository = "https://github.com/jaimarvelquant/marvelquant-data"
Issues = "https://github.com/jaimarvelquant/marvelquant-data/issues"

[project.scripts]
transform-nse-data = "marvelquant_data.scripts.transform:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["marvelquant_data*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
marvelquant_data = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
